# project1_10.15.2016-12.24.2016

./: README.md
src/caffe_msg_tagger/: CMakeLists.txt  README.md  howToLaunch.txt  package.xml  synset_words_cut.txt
src/caffe_msg_tagger/launch/: tagger.bag.launch  tagger.kinect.launch  tagger.usb_cam.launch  tagger.xtion.launch
src/caffe_msg_tagger/msg/: PredictionData.msg  PredictionGroup.msg
src/caffe_msg_tagger/src/: Classifier.h  classify_server.cpp  image_client.cpp
src/caffe_msg_tagger/srv/: tagService.srv
src/qt_tutorials/: CMakeLists.txt  package.xml
src/qt_tutorials/src/: listener.cpp  listener.hpp  main.cpp  main_window.cpp  main_window.hpp  qnode.cpp  qnode.hpp
src/qt_tutorials/ui/: main_window.ui
src/svm_service_msg/: CMakeLists.txt  package.xml
src/svm_service_msg/src/: svm_service_msg_node.cpp
src/svm_service_msg/src/imageTags/: ImageTags.cpp
src/svm_service_msg/srv/: svmService.srv
